# The-International-Open-Source

./: .cirrus.yml  .env.example  .eslintignore  .eslintrc.js  .eslintrc.json  .gitconsensus.yaml  .gitignore  .prettierrc  .releaserc.json  .screeps.yaml.example  DESIGN.md  LICENSE  README.md  design.md  example.screeps.json  grafanaModel.json  grafanaModelPrivateServer.json  jest.config.js  package-lock.json  package.json  rollup.config.js  screeps.json.example  server.js  test.js  test.ts  tsconfig.json  uploadCode.js
.github/: FUNDING.yml
dist - Copy/: main.js
docs/: coverage.html  dependencies.html  index.html  license.html  modules.html  overview.html  properties.html
helper/: preBuild.js  server.js
server/: .env.example  .screepsrc.yaml  Dockerfile  README.md  commands.md  config.js  docker-compose.yml  followLogs.js  helper.js  index.js  package-lock.json  package.json
src/: .gitignore  EncoderDecoderTogether.min.js  allyList.js  antifa.js  antifaAssaulterManager.js  antifaFunctions.js  antifaManager.js  antifaSupporterManager.js  builderManager.js  claimerFunctions.js  claimerManager.js  commands.js  communeDefenderFunctions.js  communeDefenderManager.js  communeManager.js  config.js  constants.js  construction.js  coreAttackerFunctions.js  coreAttackerManager.js  creepBodies.js  creepData.js  creepFunctions.js  creepManager.js  creepOpts.js  creepRequirements.js  data.js  defenceManager.js  defenseManager.js  ecoManager.js  factories.js  findAnchor.js  findRampartPlacement.js  global.js  gruntfile.js  (+119 more)
wasm/: Cargo.toml
wasm/src/: lib.rs  logging.rs
(+1191 files in other folders)
