[package]
name = "commiebot-wasm"
version = "0.0.0"
authors = []
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3"
log = "0.4"
fern = "0.6"
screeps-game-api = "0.14"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"] }

[profile.release]
panic = "abort"
opt-level = 3
lto = true

[package.metadata.wasm-pack.profile.release]
#wasm-opt = ["-O4"]
wasm-opt = false

[features]
default = []
